# Hannah-Montana-AI

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  compose.local.yml  pyproject.toml  secrets.local.env.example
.github/: PULL_REQUEST_TEMPLATE.md
docs/: API_STANDARD.md  ARCHITECTURE.md  FEATURE_CLASSIFICATION.md  FEATURE_SPEC_IMPLEMENTATION.md  GIT_STRATEGY.md  GLOBAL_PEER_AI_SMOKE.md  GLOBAL_PEER_ALL_RESULTS.md  GLOBAL_PEER_BUSINESS_PROFILE_CLASSIFIER.md  HANNAH_AI_MODEL_AUDIT.md  IMPLEMENTATION_LOG.md  KOREAN_FINANCIAL_TERM_RAG.md  MODEL_CARD.md  OPERATIONS.md  ROADMAP.md  SECURITY.md  TESTING.md
reports/: dataset-collection.json  full-content-training-dataset-report.json  full-universe-codex-coverage-report.json  global-peer-ai-smoke-report.json  global-peer-all-results.csv  global-peer-explanation-llm-readiness.json  global-peer-full-coverage-report.json  global-peer-fundamentals-sync-report.json  global-peer-korea-company-profile-sync-report.json  global-peer-korea-industry-sync-report.json  global-peer-qwen3-explainer-training.json  global-peer-qwen3-generation-eval.json  global-peer-training-report.json  hannah-ai-model-audit-report.json  korean-financial-term-explanation-eval.json  live-news-evaluation-report.json  live-news-monitoring-status.json  live-news-quality-audit-report.json  ml-model-evaluation.json  ml-training-report.json  model-confidence-calibration.json  model-evaluation.json  model-release-report.json  pseudo-label-promotion-monitoring.json  real-full-content-training-dataset-report.json  service-readiness-report.json  stock-candidate-quota-experiment.json  stock-collection-shard-plan.json  stock-coverage-report.json  stock-gold-active-review-report.json  stock-gold-coverage-active-review-report.json  stock-gold-coverage-plan-report.json  stock-gold-coverage-promotion-report.json  stock-gold-coverage-validation-report.json  stock-gold-promotion-report.json  stock-gold-review-batch-report.json  stock-gold-review-validation-report.json  stock-linker-training-report.json  stock-training-candidate-report.json  stock-universe-sync.json  (+2 more)
scripts/: approve_stock_gold_coverage_with_codex.py  build_augmented_training_data.py  build_full_universe_codex_stock_review_gold.py  build_global_peer_all_results_report.py  build_global_peer_explanation_llm_dataset.py  build_global_peer_full_coverage_report.py  build_gold_evaluation_data.py  build_hannah_ai_model_audit_report.py  build_live_news_evaluation_batch.py  build_live_news_monitoring_status.py  build_live_news_quality_audit.py  build_model_confidence_calibration_report.py  build_model_release_report.py  build_news_style_training_data.py  build_pseudo_label_monitoring_report.py  build_real_full_content_training_data.py  build_service_readiness_report.py  build_stock_candidate_quota_experiment.py  build_stock_collection_shard_plan.py  build_stock_coverage_report.py  collect_training_data.py  (+26 more)
(+96 files in other folders)
