[project]
name = "hannah-montana-ai"
version = "0.1.0"
description = "Financial NLP analysis API for Hana OmniLens alerts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["hannah_montana_ai"]

[tool.bandit]
exclude_dirs = ["tests"]
